chore: update set-up

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ active_border_color #b7bdf8
 window_border_width 1
 
 background_opacity 0.9
-background_tint 0.4
+background_tint 0.6
 background_tint_gaps 1.0
 background_blur 4
 
@@ -27,72 +27,27 @@ strip_trailing_spaces smart
 
 
 # The basic colors
-foreground              #cad3f5
-background              #24273a
-selection_foreground    #24273a
-selection_background    #f4dbd6
+foreground #a9b1d6
+background #1a1b26
+cursor #a9b1d6
 
-# Cursor colors
-cursor                  #f4dbd6
-cursor_text_color       #24273a
+color0 #1a1b26
+color8 #4e5173
 
-# URL underline color when hovering with mouse
-url_color               #f4dbd6
+color1 #F7768E
+color9 #F7768E
 
-# Kitty window border colors
-active_border_color     #b7bdf8
-inactive_border_color   #6e738d
-bell_border_color       #eed49f
+color2 #9ECE6A
+color10 #9ECE6A
 
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+color3 #E0AF68
+color11 #E0AF68
 
-# Tab bar colors
-active_tab_foreground   #181926
-active_tab_background   #c6a0f6
-inactive_tab_foreground #cad3f5
-inactive_tab_background #1e2030
-tab_bar_background      #181926
+color4 #7AA2F7
+color12 #7AA2F7
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #24273a
-mark1_background #b7bdf8
-mark2_foreground #24273a
-mark2_background #c6a0f6
-mark3_foreground #24273a
-mark3_background #7dc4e4
+color5 #9a7ecc
+color13 #9a7ecc
 
-# The 16 terminal colors
-
-# black
-# color0 #494d64
-# color8 #5b6078
-
-# red
-color1 #ed8796
-color9 #ed8796
-
-# green
-color2  #a6da95
-color10 #a6da95
-
-# yellow
-color3  #eed49f
-color11 #eed49f
-
-# blue
-color4  #8aadf4
-color12 #8aadf4
-
-# magenta
-color5  #f5bde6
-color13 #f5bde6
-
-# cyan
-color6  #8bd5ca
-color14 #8bd5ca
-
-# white
-# color7  #b8c0e0
-# color15 #a5adcb
+color6 #4abaaf
+color14 #4abaaf
